[workspace]
members = [".", "migration", "client", "test-support", "cli"]

[workspace.package]
version = "0.4.23"
edition = "2021"
license = "MPL-2.0"
homepage = "https://divviup.org"
repository = "https://github.com/divviup/divviup-api"

[workspace.dependencies]
divviup-client = { path = "./client", version = "0.4.23" }
divviup-cli = { path = "./cli", version = "0.4.23" }
divviup-api.path = "."
test-support.path = "./test-support"

[package]
name = "divviup-api"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
version.workspace = true
default-run = "divviup_api_bin"

[features]
default = []
api-mocks = ["dep:trillium-testing"]
integration-testing = []
otlp-trace = ["opentelemetry/trace", "opentelemetry-otlp", "opentelemetry_sdk/trace", "trillium-opentelemetry/trace"]

[dependencies]
aes-gcm = "0.10.3"
async-lock = "3.4.0"
async-session = "3.0.0"
base64 = "0.22.1"
console-subscriber = "0.4.1"
email_address = "0.2.9"
fastrand = "2.3.0"
futures-lite = "2.6.0"
git-version = "0.3.9"
janus_messages = "0.7.48"
log = "0.4.25"
opentelemetry = { version = "0.27.1", features = ["metrics", "logs"] }
opentelemetry-prometheus = { version = "0.27.0", features = ["prometheus-encoding"] }
prio = "0.16.7"
prometheus = "0.13.4"
querystrong = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_path_to_error = "0.1.16"
sha2 = "0.10.8"
subtle = "2.6.1"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["serde", "serde-well-known"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
trillium = "0.2.20"
tracing-chrome = "0.7.2"
tracing-log = "0.2.0"
tracing-stackdriver = "0.10.0"
tracing-subscriber = { version = "0.3.19", features = [
        "json",
        "env-filter",
        "std",
        "fmt",
] }
trillium-api = { version = "0.2.0-rc.12", default-features = false }
trillium-caching-headers = "0.2.3"
trillium-client = { version = "0.6.2", features = ["json"] }
trillium-compression = "0.1.3"
trillium-conn-id = "0.2.3"
trillium-cookies = "0.4.2"
trillium-forwarding = "0.2.4"
trillium-http = { version = "0.3.14", features = ["http-compat", "serde"] }
trillium-logger = "0.4.5"
trillium-macros = "0.0.6"
trillium-prometheus = "0.2.0"
trillium-redirect = "0.1.2"
trillium-router = "0.4.1"
trillium-rustls = "0.8.1"
trillium-sessions = "0.4.3"
trillium-static-compiled = "0.5.2"
trillium-testing = { version = "0.7.0", optional = true }
trillium-tokio = "0.4.0"
typenum = "1.17.0"
url = "2.5.2"
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
trillium-opentelemetry = { version = "0.10.0", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "logs", "metrics"] }
opentelemetry-otlp = { version = "0.27.0", optional = true }

[dependencies.oauth2]
version = "4.4.2"
default-features = false
features = ["pkce-plain"]

[dependencies.sea-orm]
version = "1.0.1"
features = [
        "runtime-tokio-rustls",
        "macros",
        "sqlx-postgres",
        "with-uuid",
        "with-time",
]

[dev-dependencies]
rcgen = "0.13.2"
regex = "1.11.1"
test-support.workspace = true

[build-dependencies]
rustc_version = "0.4.1"

[lib]
name = "divviup_api"
path = "src/lib.rs"

[[bin]]
name = "divviup_api_bin"
path = "src/bin.rs"

[profile.release]
lto = "fat"
