[package]
name = "divviup-cli"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
version.workspace = true
description = "Command line utility for divviup.org"

[features]
default = ["common", "aws-lc-rs"]
common = ["hpke", "trillium-rustls/client", "trillium-rustls/tls12"]
# Building aws-lc-rs on Windows is challenging at best because of aws-lc's toolchain, so we allow
# using ring instead
aws-lc-rs = ["trillium-rustls/aws-lc-rs"]
ring = ["trillium-rustls/ring"]
hpke = ["dep:hpke-dispatch", "dep:rand"]
admin = ["divviup-client/admin"]

[[bin]]
name = "divviup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.27", features = ["derive", "env"] }
thiserror = "2.0.11"
divviup-client = { workspace = true }
trillium-rustls = { version = "0.8.1", default-features = false }
trillium-tokio = "0.4.0"
serde = "1.0.217"
email_address = "0.2.9"
humantime = "2.1.0"
base64 = "0.22.1"
time = { version = "0.3.37", features = [
    "serde",
    "serde-well-known",
    "local-offset",
] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
env_logger = "0.11.6"
colored = "3.0.0"
const_format = "0.2.34"
hpke-dispatch = { version = "0.7.0", features = ["serde"], optional = true }
rand = { version = "0.8.5", optional = true }
janus_client = "0.7.30"
janus_collector = "0.7.21"
url = "2.5.2"
janus_messages = "0.7.50"
prio = "0.16.7"
tokio = { version = "1.43.0" }
