[package]
name = "divviup-cli"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
version.workspace = true
description = "Command line utility for divviup.org"

[features]
default = ["hpke"]
hpke = ["dep:hpke-dispatch", "dep:rand"]
admin = ["divviup-client/admin"]

[[bin]]
name = "divviup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { workspace = true, features = ["derive", "env"] }
thiserror.workspace = true
divviup-client = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde.workspace = true
email_address.workspace = true
humantime.workspace = true
base64.workspace = true
time = { workspace = true, features = [
    "serde",
    "serde-well-known",
    "local-offset",
] }
serde_json.workspace = true
serde_yaml.workspace = true
env_logger.workspace = true
colored.workspace = true
const_format.workspace = true
hpke-dispatch = { workspace = true, features = ["serde"], optional = true }
rand = { workspace = true, optional = true }
janus_client.workspace = true
janus_collector.workspace = true
url.workspace = true
janus_messages.workspace = true
prio.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
