[package]
name = "divviup-client"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
version.workspace = true
description = "Async rust client for divviup.org"

[features]
default = []
admin = []

[dependencies]
base64 = "0.22.1"
email_address = "0.2.9"
prio = "0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
trillium-client = { version = "0.6.2", features = ["json"] }
trillium-http = "0.3.14"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }
time = { version = "0.3.43", features = ["serde", "serde-well-known"] }
log = "0.4.27"
pad-adapter = "0.1.1"
janus_messages = "0.7.87"
num-bigint = "0.4.6"
num-rational = "0.4.2"

[dev-dependencies]
divviup-api.workspace = true
fastrand = "2.3.0"
futures-lite = "2.6.1"
test-support.workspace = true
trillium = "0.2.20"
trillium-macros = "0.0.6"
trillium-testing = { version = "0.7.0", features = ["tokio"] }
trillium-rustls = "0.8.1"
trillium-tokio = "0.4.0"
divviup-client =  { path = ".", features = ["admin"] }
