[package]
name = "migration"
version.workspace = true
edition = "2021"
publish = false
default-run = "migration"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.60", features = ["env", "derive"] }
sea-orm = "1.1.19"
serde_json = "1.0.149"
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dependencies.sea-orm-migration]
version = "1.1.19"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite"] }
sea-orm-migration = { version = "1.1.19", features = ["sqlx-sqlite"] }
