[package]
name = "migration"
version.workspace = true
edition = "2021"
publish = false
default-run = "migration"
license.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true, features = ["env", "derive"] }
sea-orm.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.sea-orm-migration]
workspace = true
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
sea-orm-migration = { workspace = true, features = ["sqlx-sqlite"] }
