[package]
name = "test-support"
version.workspace = true
edition = "2021"
publish = false
license.workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.8"
bytes = "1"
fastrand = "2.4.1"
http-body-util = "0.1"
time = "0.3.47"
divviup-api = { workspace = true, features = ["test-header-injection"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = [
        "json",
        "env-filter",
        "std",
        "fmt",
] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["net", "rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "serde"] }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite"] }
pretty_assertions = "1.4.1"
rand = "0.8.5"
base64 = "0.22.1"
querystrong = "0.4.0"
test-harness = "0.3.1"
