[package]
name = "test-support"
version.workspace = true
edition = "2021"
publish = false
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
fastrand.workspace = true
http-body-util.workspace = true
time.workspace = true
divviup-api = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = [
        "json",
        "env-filter",
        "std",
        "fmt",
] }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "json"] }
tokio = { workspace = true, features = ["net", "rt"] }
tokio-util = { workspace = true, features = ["rt"] }
tower = { workspace = true, features = ["util"] }
url.workspace = true
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
pretty_assertions.workspace = true
rand.workspace = true
base64.workspace = true
querystrong.workspace = true
test-harness.workspace = true
