[package]
name = "test-support"
version.workspace = true
edition = "2021"
publish = false
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
divviup-api = { workspace = true }
fastrand.workspace = true
http-body-util.workspace = true
pretty_assertions.workspace = true
querystrong.workspace = true
rand.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "json"] }
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
serde.workspace = true
serde_json.workspace = true
test-harness.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["net", "rt"] }
tokio-util = { workspace = true, features = ["rt"] }
tower = { workspace = true, features = ["util"] }
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = [
    "json",
    "env-filter",
    "std",
    "fmt",
] }
url.workspace = true
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
